src/objects/Marketing_Email_Addresses__c.object
<CustomObject>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_of_last_sent_email__c</fullName>
        <label>Status of last sent email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent Message</fullName>
                </value>
                <value>
                    <fullName>Opened</fullName>
                </value>
                <value>
                    <fullName>Bounced</fullName>
                </value>
                <value>
                    <fullName>Known bounce</fullName>
                </value>
                <value>
                    <fullName>Spam Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Marketing Email Addresses</label>
    <nameField>
        <displayFormat>MEA{0000}</displayFormat>
        <label>Marketing Email Addresses Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Email Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>